# PointPairFeature

./: .gitignore  IMPORTANT.txt  README.md
config/: ppf_match_config_ape.config  ppf_match_config_pipe.config  ppf_match_config_pipe_speed_test.config  ppf_match_config_plat.config  ppf_train2_config_ape.config
src/: CMakeLists.txt  CMakeLists.txt.user.01dfbb0  Detectors.cpp  Detectors.h  Detectors_2.cpp  Detectors_2.h  PPFFeature.cpp  PPFFeature.h  SmartSampling.cpp  SmartSampling.hpp  Voxel_grid.cpp  Voxel_grid.h  common.cpp  common.h  pose_cluster.cpp  pose_cluster.h  util.cpp  util.h  util_pcl.cpp  util_pcl.h
src/app/: CMakeLists.txt  match_performance_test.cpp  mesh_sampling.cpp  mesh_sampling_orginal.cpp  ply2pcd.cpp  ppf_match.cpp  ppf_train.cpp  ppf_train_ver2.cpp  test_pose_cluster.cpp  test_pose_compute.cpp  tests.cpp  txt2pcd.cpp
src/cmakebackup/: CMakeLists.txt  Detectors.cpp  Detectors.h
src/common_utils/: precomp.h  util.cpp  util.h
src/cv_utils/: CMakeLists.txt  cv_utils.cpp  cv_utils.h  cv_utils.hpp
src/detector/: Detector_XML.cpp  Detector_XML.h  Detectors_2.cpp  Detectors_2.h  tinyxml.cpp
src/pcl_utils/: CMakeLists.txt  SmartSampling.hpp  Voxel_grid.h  util_pcl.cpp  util_pcl.h
src/python/: python_ppf_lib.cpp
src/tests/: CMakeLists.txt  test_ACCV3D_match.cpp  test_Detector_train.cpp  test_Detectors.cpp  test_neiborIterator.cpp  test_normal_compute.cpp  test_ppf_feature_compute.cpp  test_read_depth.cpp
src/tests/backup/: ICP.cpp  match_performance_test.cpp  test_ACCV3D_match.cpp  test_ACCV3D_match_copy.cpp  tests.cpp  txt_normal_compute.cpp
src/zyk_ppf/: Detectors_2.cpp  Detectors_2.h  PPFFeature.cpp  PPFFeature.h  pose_cluster.cpp~RF4e23383.TMP  pose_cluster.h
